@@ -105,6 +105,7 @@ where XXXXXX is the bug number as listed below.
 344295  syscall recvmmsg on arm64 (243) and ppc32/64 (343) unhandled
 344307  2 unhandled syscalls on aarch64/arm64: umount2(39), mount (40)
 344314  callgrind_annotate ... warnings about commands containing newlines
+344318  socketcall should wrap recvmmsg and sendmmsg
 344499  Fix compilation for Linux kernel >= 4. With this, also require
         a Linux kernel >= 2.6 as 2.4 is mostly untested and might trigger
         obvious and non-obvious issues
